# redisrag

./: .gitmodules  README.md
backend/: Dockerfile  pyproject.toml
backend/webapi/: .env.docker  .env.sample  entrypoint.sh  pyproject.toml
backend/webapi/skills/utility/chat/: skprompt.txt
backend/webapi/webapi/: main.py
